# CI-impacts-information-retrieval

./: .env_example  .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  main.py  pyproject.toml
ner_patterns.jsonl/: patterns
notebooks/: fill_vectordb.ipynb  llm_geolocations.ipynb
src/: database.py  document_cleaning.py  setting.py  settings.py
