[project]
name = "ci-impacts-llm"
version = "0.1.0"
description = ""
authors = [
    {name = "Anna Buch", email = "anna.buch@tu-berlin.de"},
]

requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "asyncpg>=0.30.0",
    "geopandas>=1.1.1",
    "ipykernel>=7.0.1",
    "llama-index>=0.10.9",
    "llama-index-embeddings-huggingface>=0.2.3",
    "nltk>=3.9.2",
    "nomic>=3.6.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pdfminer-six>=20250506",
    "pgai[vectorizer-worker]>=0.12.1",
    "pgvector>=0.4.1",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.11.0",
    "pypdf>=6.1.3",
    "sqlalchemy>=2.0.44",
    "tiktoken>=0.12.0",
    "transformers",
]



[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
# see, https://docs.astral.sh/ruff/rules
lint.select = [
    # defaults
    "F",    # Pyflakes
    "E",    # pycodestyle Error

    # additional
    "A",    # not shadow built-in functions
    "I",    # isort imports
    "N",    # check for PEP8 naming conventions
    "W",    # pycodestyle Warning

    # clean docstrings
    "D201", "D207", "D208", "D209", "D210", "D214", "D215", "D300", "D403",

    # auto-remove unused 'noqa' comments
    "RUF100", "RUF101",
]
lint.ignore = ["C901", "E714", "I001"]

fix = true
exclude = [".venv", ".ipynb", "versioneer.py", "*_cache"]
