[project]
name = "ci-impacts-llm"
version = "0.1.0"
description = ""
authors = [
    {name = "Anna Buch", email = "anna.buch@tu-berlin.de"},
]

requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "accelerate>=1.11.0",
    "ipykernel>=7.1.0",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "unstructured[all-docs]>=0.18.18",
]




[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
# see, https://docs.astral.sh/ruff/rules
select = [
    # defaults
    "F",    # Pyflakes
    "E",    # pycodestyle Error

    # additional
    "A",    # not shadow built-in functions
    "I",    # isort imports
    "N",    # check for PEP8 naming conventions
    "W",    # pycodestyle Warning

    # clean docstrings
    "D201", "D207", "D208", "D209", "D210", "D214", "D215", "D300", "D403",

    # auto-remove unused 'noqa' comments
    "RUF100", "RUF101",
]
ignore = ["C901", "E714", "I001"]
# fix = true
exclude = [".venv", ".ipynb", "versioneer.py", "*_cache"]
